[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deepbrain-cust-yolo"
version = "0.1.0"
description = "Pure-PyTorch YOLOv8 inference — no ultralytics runtime dependency."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "opencv-python>=4.7",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16"]
hf   = ["datasets>=2.14", "Pillow>=9.0"]
dev  = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
